# QuakeSense

./: .replit  ReadMe.md  app.py  earthquake_service.py  models.py  prediction_service.py  pyproject.toml  replit.md  routes.py
attached_assets/: Pasted-Project-Title-QuakeSense-Global-Earthquake-Tracking-and-Prediction-System-Project-Description--1756898924000_1756898924001.txt
static/css/: style.css
static/js/: admin.js  map.js
templates/: admin.html  base.html  index.html
